--- a/ok-main/appsettings.json
+++ b/ok-main/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-E8IOH930;Database=aspnet-NotUseAuto-521DEE55-987E-4610-8D40-9C624F5FF5F5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=KuMPC;Database=aspnet-NotUseAuto-521DEE55-987E-4610-8D40-9C624F5FF5F5;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
